Fix rendering issues on iphone?

--- a/chat/smartphone-chat/src/App.scss
+++ b/chat/smartphone-chat/src/App.scss
@@ -161,10 +161,11 @@ html, body {
 .login-screen button {
   padding: 1vh 2vw; /* Button padding relative to viewport */
   font-size: 2.5vw; /* Button text size */
-  //cursor: pointer; /* Change cursor on hover */
-  //background-color: rgba(255, 255, 255, 0.8); /* Light background for contrast */
-  //border: none; /* Remove default button border */
-  //border-radius: 4px; /* Rounded corners */
+  cursor: pointer; /* Change cursor on hover */
+  border: none; /* Remove default button border */
+  outline: none; /* Remove default focus outline */
+  appearance: none; /* Remove the iOS appearance */
+  box-shadow: none; /* Remove any default shadows */
   background-image: url('../../assets/login-button.png'); /* Path to your image */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating the image */
@@ -194,6 +195,7 @@ html, body {
   font-size: 3vw; /* Adjust font size relative to viewport height */
   background-color: #4A4C57;
   color:#ffffff;
+  border-color: light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
 }
 
 /* Error message style */
@@ -306,6 +308,8 @@ html, body {
   outline: none;
   font-size: 3vh;
   height: 3vh;
+  appearance: none;
+  box-shadow: none; 
 }
 
 /* Focus state for the input to resemble RS-style */
@@ -326,6 +330,7 @@ html, body {
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
   transition: background-color 0.3s ease;
+  appearance: none;
 }
 
 /* Button hover effect for interaction */
